# EHR

./: .gitignore  README.md  db.py  ehr.db  main.py  parse_template.py  pyproject.toml
data/: ehr.school.v0.json  entrys.txt  fhir_export.json  fhir_export_2.json  fhir_export_3.json  fhir_export_5.json
models/: context.py  ehr_models.py  pulse_oximetry.py
templates/: index.html  vitals_form.html
